chore: add quality toolchain, CI, and Sentry integration

--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -7,7 +7,15 @@
   "exports": {
     ".": "./src/index.ts"
   },
+  "scripts": {
+    "typecheck": "tsc -p tsconfig.json --noEmit"
+  },
   "peerDependencies": {
     "react": ">=18 <20"
+  },
+  "devDependencies": {
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "typescript": "~5.9.3"
   }
 }
