--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.4.1",
+    "@sentry/vite-plugin": "^2.18.0",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
@@ -17,6 +19,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@sentry/react": "^8.15.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   }
