--- a/package.json
+++ b/package.json
@@ -10,6 +10,34 @@
     "dev": "pnpm -r --parallel dev",
     "build": "pnpm -r build",
     "preview": "pnpm -r preview",
-    "lint": "pnpm -r lint"
+    "lint": "eslint .",
+    "typecheck": "pnpm -r --parallel typecheck",
+    "test": "jest",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lighthouse": "pnpm --filter shell build && lhci autorun",
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@lhci/cli": "^0.14.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.15",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "ts-jest": "^29.2.5",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.29.0"
   }
 }
