--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.5.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
