--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "@mfe-tech/shared-ui",
   "private": true,
   "version": "0.1.0",
@@ -14,6 +14,8 @@
     "react": ">=18 <20"
   },
   "devDependencies": {
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "typescript": "~5.9.3"
